UI alignment fixes.

--- a/src/App.css
+++ b/src/App.css
@@ -24,11 +24,11 @@
 
 .button {
   background: #3fa45a;
-  border-radius: 8px;
+  border-radius: 4px;
   border: none;
   color: white;
   font-size: 16px;
-  padding: 11px 26px 11px 26px;
+  padding: 14px 26px 14px 26px;
   /* box-shadow: rgb(62 115 98 / 65%) 2px 4px 15px; */
 
 }
@@ -46,7 +46,7 @@
   justify-content: space-between;
   /* max-width: 1350px;
      width: 100%; */
-  margin: 75px auto;
+  margin: 75px auto 40px;
 }
 
 .carousel.carousel-slider .control-arrow:hover {
@@ -92,8 +92,9 @@
   }
 }
 
-@media (min-width: 960px) {
+@media screen and (min-width: 960px) {
   .carousel .control-dots {
     bottom: 21px !important;
   }
+
 }
