--- a/src/components/OurTeam/team.css
+++ b/src/components/OurTeam/team.css
@@ -130,7 +130,7 @@ a:hover {
   border-radius: 8px;
 }
 .img-responsive1{
-  width: 60%;
+  width: 5  8%;
   border-radius: 8px;
 }
 
