--- a/src/components/Products/product.css
+++ b/src/components/Products/product.css
@@ -3,7 +3,7 @@
     width: 100%;
     margin: auto auto 75px;
     position: relative;
-    padding-top: 70px;
+    padding-top: 50px;
 }
 
 .single-prod {
